<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:orientation="vertical" 
    android:layout_width="fill_parent" android:layout_height="fill_parent">

    <TextView
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:text="@string/alarm_controller"/>

    <Button
        android:id="@+id/one_shot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/one_shot_alarm" />

    <Button android:id="@+id/start_repeating"
        android:layout_width="wrap_content" android:layout_height="wrap_content" 
        android:text="@string/start_repeating_alarm" />

    <Button
        android:id="@+id/stop_repeating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_repeating_alarm" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
</LinearLayout>